Fixed contrast error for mountain project external link

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -100,6 +100,11 @@ ul li a {
   padding: 5px;
 }
 
+.light-link {
+  font-weight: bold;
+  color: #bf610f;
+}
+
 .submit:hover {
   opacity: 10;
   background-color: #14cc70;
